<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.DetailActivityViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_normal"
        android:id="@+id/content_detail_motion_layout"
        app:layoutDescription="@xml/content_detail_scene"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/file_name"
            android:textSize="@dimen/font_size_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/file_name"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@{viewModel.fileName}"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/file_status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/download_status"
            android:textSize="@dimen/font_size_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/file_status"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_name" />

        <TextView
            android:id="@+id/file_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"
            android:text="@{viewModel.fileStatus}"
            app:layout_constraintBaseline_toBaselineOf="@+id/file_status_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_status_label"
            tools:text="Success" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"/>


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>